--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -17,47 +17,47 @@
 
 
 
-<div class="container-fluid" style="margin-top: 120px;">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="row">
-				<div class="col-md-4">
-				</div>
-				<div class="col-md-4" style=" border: 1px solid black; padding: 15px;">
+<!-- <div class="container-fluid" style="margin-top: 120px;"> -->
+<!-- 	<div class="row"> -->
+<!-- 		<div class="col-md-12"> -->
+<!-- 			<div class="row"> -->
+<!-- 				<div class="col-md-4"> -->
+<!-- 				</div> -->
+<!-- 				<div class="col-md-4" style=" border: 1px solid black; padding: 15px;"> -->
 				
-				<form method="POST" th:action="@{/upload-csv-file}" enctype="multipart/form-data">
-    <div class="form-group mt-3">
-        <label style="font-weight: bold;" for="file">Importer un nouveau fichier .CSV</label>
-        <input type="file" name="file" class="form-control-file" id="file" accept=".csv">
-    </div>
+<!-- 				<form method="POST" th:action="@{/upload-csv-file}" enctype="multipart/form-data"> -->
+<!--     <div class="form-group mt-3"> -->
+<!--         <label style="font-weight: bold;" for="file">Importer un nouveau fichier .CSV</label> -->
+<!--         <input type="file" name="file" class="form-control-file" id="file" accept=".csv"> -->
+<!--     </div> -->
 
-     <button onclick="spinnerFunction()" class="btn btn-primary" type="submit">
-  <span id="mySpinner" class="" role="status" aria-hidden="true"></span>
-  <span id="myTextToHide">Importer</span>
-    <span id="myTextToShow" style="display: none">Importation en cours...</span>
-</button>
+<!--      <button onclick="spinnerFunction()" class="btn btn-primary" type="submit"> -->
+<!--   <span id="mySpinner" class="" role="status" aria-hidden="true"></span> -->
+<!--   <span id="myTextToHide">Importer</span> -->
+<!--     <span id="myTextToShow" style="display: none">Importation en cours...</span> -->
+<!-- </button> -->
                        
-</form>
+<!-- </form> -->
 
-<div th:if="${messagesuccess}" th:text="${messagesuccess}" class="alert alert-success" role="alert">
-</div>
-<div th:if="${messageerror}" th:text="${messageerror}" class="alert alert-danger" role="alert">
-</div>
-<div th:if="${messageempty}" th:text="${messageempty}" class="alert alert-warning" role="alert">
-</div>
+<!-- <div th:if="${messagesuccess}" th:text="${messagesuccess}" class="alert alert-success" role="alert"> -->
+<!-- </div> -->
+<!-- <div th:if="${messageerror}" th:text="${messageerror}" class="alert alert-danger" role="alert"> -->
+<!-- </div> -->
+<!-- <div th:if="${messageempty}" th:text="${messageempty}" class="alert alert-warning" role="alert"> -->
+<!-- </div> -->
 
-				</div>
-				<div class="col-md-4">
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<br>
+<!-- 				</div> -->
+<!-- 				<div class="col-md-4"> -->
+<!-- 				</div> -->
+<!-- 			</div> -->
+<!-- 		</div> -->
+<!-- 	</div> -->
+<!-- </div> -->
+<!-- <br> -->
 
 
 
-<div class="container-fluid" style="margin-top: 0px;">
+<div class="container-fluid" style="margin-top: 120px;">
 	<div class="row">
 		<div class="col-md-12">
 			<div class="row">
