--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -189,6 +189,39 @@ background-color: #90EE90;
   background-color: #555;
 }
 
+.header {
+/* 		padding: 30px; */
+	text-align: center;
+	margin-top: 20px;
+	margin-left: 25px;
+	margin-right: 25px;
+/*     background-color: #fefee0; */
+    }
+
+.header h1 {
+	font-size: 50px;
+}
+
+.header p {
+	font-size: 25px;
+}
+
+.welcomeright{
+	font-size:20px ! important;
+	font-weight: bold;
+	margin-bottom:20px; 
+	margin-right: 50px;
+	text-align: right;
+}
+
+.welcomeleft{
+	font-size:20px ! important;
+	font-weight: bold;
+	margin-bottom:20px; 
+	margin-left: 50px;
+	text-align: right;
+}
+
 
 /*                           COLORS */
 /* ////////////////////////////////////////////////////////////// */
