--- a/src/main/resources/templates/barchart.html
+++ b/src/main/resources/templates/barchart.html
@@ -13,7 +13,10 @@
     
 </head>
 <body>
+        		<div th:replace="_nav-components :: header">...</div>
+
         		<div th:replace="_nav-components :: nav">...</div>
+        		
 
 
 
