--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -67,7 +67,7 @@
 				
 				<form method="POST" th:action="@{/upload-json-data-from-url}" enctype="multipart/form-data">
     <div class="form-group mt-3">
-        <label style="font-weight: bold;" for="url">Importer donn&eacute;es via une URL (JSON)</label>
+        <label style="font-weight: bold;" for="url">Importer les donn&eacute;es</label>
       
         <input type="date" name="jour" class="form-control-file" id="">
 <!--         <input type="text" name="url" class="form-control-file" id="url"> -->
