--- a/src/main/resources/templates/_nav-components.html
+++ b/src/main/resources/templates/_nav-components.html
@@ -34,7 +34,7 @@
       
         <a href="/" class="" style="font-weight: bold; font-style:oblique; color: white; border: 3px solid gold; border-radius:50px; background-color: red; padding: 5px;">
 <!--            <img style="width: 75px; height: 80px; box-shadow: 4px 4px 8px #000000; border-style: solid; border-radius: 50%; border-color: gold;" th:src="@{/img/horsefire.jpg}" alt="logo" />  -->
-           <strong>Sam & Tay Infos</strong> 
+           <strong>Sam'Tay Infos</strong> 
 		</a>		
        </h4>
       </div>
