--- a/src/main/resources/templates/_components.html
+++ b/src/main/resources/templates/_components.html
@@ -1517,45 +1517,36 @@
      </select>
     </div>
     
-<!--       <div class="form-group col-md-4"> -->
-<!--       <label for="">6&egrave;me chrono</label> -->
-<!--       <select  class="form-control" name="six"> -->
-<!--         <option value="">Choisir...</option> -->
-<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
-<!-- 		      th:text="${horse.numero}"> -->
-<!-- 		   </option>       -->
-<!--      </select> -->
-<!--     </div> -->
+      <div class="form-group col-md-4">
+      <label for="">6&egrave;me Cheval</label>
+      <select  class="form-control" name="six">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
     
-<!--       <div class="form-group col-md-4"> -->
-<!--       <label for="">7&egrave;me chrono</label> -->
-<!--       <select  class="form-control" name="seven"> -->
-<!--         <option value="">Choisir...</option> -->
-<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
-<!-- 		      th:text="${horse.numero}"> -->
-<!-- 		   </option>       -->
-<!--      </select> -->
-<!--     </div> -->
+      <div class="form-group col-md-4">
+      <label for="">7&egrave;me Cheval</label>
+      <select  class="form-control" name="seven">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
     
-<!--       <div class="form-group col-md-4"> -->
-<!--       <label for="">8&egrave;me chrono</label> -->
-<!--       <select  class="form-control" name="eight"> -->
-<!--         <option value="">Choisir...</option> -->
-<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
-<!-- 		      th:text="${horse.numero}"> -->
-<!-- 		   </option>       -->
-<!--      </select> -->
-<!--     </div> -->
+      <div class="form-group col-md-4">
+      <label for="">8&egrave;me Cheval</label>
+      <select  class="form-control" name="eight">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
     
-<!--       <div class="form-group col-md-4"> -->
-<!--       <label for="">9&egrave;me chrono</label> -->
-<!--       <select  class="form-control" name="nine"> -->
-<!--         <option value="">Choisir...</option> -->
-<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
-<!-- 		      th:text="${horse.numero}"> -->
-<!-- 		   </option>       -->
-<!--      </select> -->
-<!--     </div> -->
 
       <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
@@ -1629,6 +1620,36 @@
       <div class="form-group col-md-4">
       <label for="">5&egrave;me Cheval</label>
       <select  class="form-control" name="five">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+        
+      <div class="form-group col-md-4">
+      <label for="">6&egrave;me Cheval</label>
+      <select  class="form-control" name="six">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">7&egrave;me Cheval</label>
+      <select  class="form-control" name="seven">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">8&egrave;me Cheval</label>
+      <select  class="form-control" name="eight">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
 		      th:text="${horse.numero}">
@@ -1714,6 +1735,36 @@
 		   </option>      
      </select>
     </div>
+        
+      <div class="form-group col-md-4">
+      <label for="">6&egrave;me Cheval</label>
+      <select  class="form-control" name="six">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">7&egrave;me Cheval</label>
+      <select  class="form-control" name="seven">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">8&egrave;me Cheval</label>
+      <select  class="form-control" name="eight">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
 
       <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
@@ -1787,6 +1838,36 @@
       <div class="form-group col-md-4">
       <label for="">5&egrave;me Cheval</label>
       <select  class="form-control" name="five">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+        
+      <div class="form-group col-md-4">
+      <label for="">6&egrave;me Cheval</label>
+      <select  class="form-control" name="six">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">7&egrave;me Cheval</label>
+      <select  class="form-control" name="seven">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">8&egrave;me Cheval</label>
+      <select  class="form-control" name="eight">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
 		      th:text="${horse.numero}">
@@ -1872,6 +1953,36 @@
 		   </option>      
      </select>
     </div>
+        
+      <div class="form-group col-md-4">
+      <label for="">6&egrave;me Cheval</label>
+      <select  class="form-control" name="six">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">7&egrave;me Cheval</label>
+      <select  class="form-control" name="seven">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">8&egrave;me Cheval</label>
+      <select  class="form-control" name="eight">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
 
       <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
@@ -1945,6 +2056,36 @@
       <div class="form-group col-md-4">
       <label for="">5&egrave;me Cheval</label>
       <select  class="form-control" name="five">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+        
+      <div class="form-group col-md-4">
+      <label for="">6&egrave;me Cheval</label>
+      <select  class="form-control" name="six">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">7&egrave;me Cheval</label>
+      <select  class="form-control" name="seven">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">8&egrave;me Cheval</label>
+      <select  class="form-control" name="eight">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
 		      th:text="${horse.numero}">
@@ -2030,6 +2171,36 @@
 		   </option>      
      </select>
     </div>
+        
+      <div class="form-group col-md-4">
+      <label for="">6&egrave;me Cheval</label>
+      <select  class="form-control" name="six">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">7&egrave;me Cheval</label>
+      <select  class="form-control" name="seven">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">8&egrave;me Cheval</label>
+      <select  class="form-control" name="eight">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
 
       <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
@@ -2103,6 +2274,36 @@
       <div class="form-group col-md-4">
       <label for="">5&egrave;me Cheval</label>
       <select  class="form-control" name="five">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+        
+      <div class="form-group col-md-4">
+      <label for="">6&egrave;me Cheval</label>
+      <select  class="form-control" name="six">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">7&egrave;me Cheval</label>
+      <select  class="form-control" name="seven">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">8&egrave;me Cheval</label>
+      <select  class="form-control" name="eight">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
 		      th:text="${horse.numero}">
@@ -2188,6 +2389,36 @@
 		   </option>      
      </select>
     </div>
+        
+      <div class="form-group col-md-4">
+      <label for="">6&egrave;me Cheval</label>
+      <select  class="form-control" name="six">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">7&egrave;me Cheval</label>
+      <select  class="form-control" name="seven">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">8&egrave;me Cheval</label>
+      <select  class="form-control" name="eight">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
 
       <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
@@ -2261,6 +2492,36 @@
       <div class="form-group col-md-4">
       <label for="">5&egrave;me Cheval</label>
       <select  class="form-control" name="five">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+        
+      <div class="form-group col-md-4">
+      <label for="">6&egrave;me Cheval</label>
+      <select  class="form-control" name="six">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">7&egrave;me Cheval</label>
+      <select  class="form-control" name="seven">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">8&egrave;me Cheval</label>
+      <select  class="form-control" name="eight">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
 		      th:text="${horse.numero}">
@@ -2346,6 +2607,36 @@
 		   </option>      
      </select>
     </div>
+        
+      <div class="form-group col-md-4">
+      <label for="">6&egrave;me Cheval</label>
+      <select  class="form-control" name="six">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">7&egrave;me Cheval</label>
+      <select  class="form-control" name="seven">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">8&egrave;me Cheval</label>
+      <select  class="form-control" name="eight">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
 
       <button type="submit" class="btn btn-primary text-dark">Envoyer</button>
  </form>
@@ -2419,6 +2710,36 @@
       <div class="form-group col-md-4">
       <label for="">5&egrave;me Cheval</label>
       <select  class="form-control" name="five">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+        
+      <div class="form-group col-md-4">
+      <label for="">6&egrave;me Cheval</label>
+      <select  class="form-control" name="six">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">7&egrave;me Cheval</label>
+      <select  class="form-control" name="seven">
+        <option value="">Choisir...</option>
+           <option th:each="horse : ${racehorses}" th:value="${horse.id}"
+		      th:text="${horse.numero}">
+		   </option>      
+     </select>
+    </div>
+    
+      <div class="form-group col-md-4">
+      <label for="">8&egrave;me Cheval</label>
+      <select  class="form-control" name="eight">
         <option value="">Choisir...</option>
            <option th:each="horse : ${racehorses}" th:value="${horse.id}"
 		      th:text="${horse.numero}">
