--- a/src/main/resources/templates/_components.html
+++ b/src/main/resources/templates/_components.html
@@ -54,7 +54,7 @@
 
 <div th:fragment="chronos-dropdownsone(racehorses)" class="collapse dropdownborder" id="collapseExample1">
 
- <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
  <h1 style="margin-bottom: 10px;">Chronos/valeurs</h1>
  
@@ -171,7 +171,7 @@
 
 <div th:fragment="chronos-dropdownstwo(racehorses)" class="collapse dropdownborder" id="collapseExample2">
 
- <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
  
@@ -287,7 +287,7 @@
 
 <div th:fragment="chronos-dropdownsthree(racehorses)" class="collapse dropdownborder" id="collapseExample3">
 
- <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
  
@@ -403,7 +403,7 @@
 
 <div th:fragment="chronos-dropdownsfour(racehorses)" class="collapse dropdownborder" id="collapseExample4">
 
- <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
  
@@ -519,7 +519,7 @@
 
 <div th:fragment="chronos-dropdownsfive(racehorses)" class="collapse dropdownborder" id="collapseExample5">
 
- <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
  
@@ -635,7 +635,7 @@
 
 <div th:fragment="chronos-dropdownssix(racehorses)" class="collapse dropdownborder" id="collapseExample6">
 
- <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
  
@@ -751,7 +751,7 @@
 
 <div th:fragment="chronos-dropdownsseven(racehorses)" class="collapse dropdownborder" id="collapseExample7">
 
- <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
  
@@ -867,7 +867,7 @@
 
 <div th:fragment="chronos-dropdownseight(racehorses)" class="collapse dropdownborder" id="collapseExample8">
 
- <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
  
@@ -983,7 +983,7 @@
 
 <div th:fragment="chronos-dropdownsnine(racehorses)" class="collapse dropdownborder" id="collapseExample9">
 
- <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
  
@@ -1099,7 +1099,7 @@
 
 <div th:fragment="chronos-dropdownsten(racehorses)" class="collapse dropdownborder" id="collapseExample10">
 
- <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
   
@@ -1215,7 +1215,7 @@
 
 <div th:fragment="chronos-dropdownseleven(racehorses)" class="collapse dropdownborder" id="collapseExample11">
 
- <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
   
@@ -1331,7 +1331,7 @@
 
 <div th:fragment="chronos-dropdownstwelve(racehorses)" class="collapse dropdownborder" id="collapseExample12">
 
- <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-chronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
   <h1 style="margin-bottom: 10px;">Chronos/Valeurs</h1>
   
@@ -1461,7 +1461,7 @@
 
 <div th:fragment="taypronos-dropdownsone(racehorses, numcourse)" class="collapse dropdownborder" id="taycollapseExample1">
 
- <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
   <h1 style="margin-bottom: 10px;">Tay'Prono</h1> 
   
@@ -1571,7 +1571,7 @@
 
 <div th:fragment="taypronos-dropdownstwo(racehorses, numcourse)" class="collapse dropdownborder" id="taycollapseExample2">
 
- <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
    <h1 style="margin-bottom: 10px;">Tay'Prono</h1>
      <input name="numcourse" type="hidden" th:value="${numcourse}"> 
@@ -1680,7 +1680,7 @@
 
 <div th:fragment="taypronos-dropdownsthree(racehorses, numcourse)" class="collapse dropdownborder" id="taycollapseExample3">
 
- <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
    <h1 style="margin-bottom: 10px;">Tay'Prono</h1>
         <input name="numcourse" type="hidden" th:value="${numcourse}"> 
@@ -1789,7 +1789,7 @@
 
 <div th:fragment="taypronos-dropdownsfour(racehorses, numcourse)" class="collapse dropdownborder" id="taycollapseExample4">
 
- <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
    <h1 style="margin-bottom: 10px;">Tay'Prono</h1>
         <input name="numcourse" type="hidden" th:value="${numcourse}"> 
@@ -1898,7 +1898,7 @@
 
 <div th:fragment="taypronos-dropdownsfive(racehorses, numcourse)" class="collapse dropdownborder" id="taycollapseExample5">
 
- <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
    <h1 style="margin-bottom: 10px;">Tay'Prono</h1>
         <input name="numcourse" type="hidden" th:value="${numcourse}"> 
@@ -2007,7 +2007,7 @@
 
 <div th:fragment="taypronos-dropdownssix(racehorses, numcourse)" class="collapse dropdownborder" id="taycollapseExample6">
 
- <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
    <h1 style="margin-bottom: 10px;">Tay'Prono</h1>
         <input name="numcourse" type="hidden" th:value="${numcourse}"> 
@@ -2116,7 +2116,7 @@
 
 <div th:fragment="taypronos-dropdownsseven(racehorses, numcourse)" class="collapse dropdownborder" id="taycollapseExample7">
 
- <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
    <h1 style="margin-bottom: 10px;">Tay'Prono</h1>
         <input name="numcourse" type="hidden" th:value="${numcourse}"> 
@@ -2225,7 +2225,7 @@
 
 <div th:fragment="taypronos-dropdownseight(racehorses, numcourse)" class="collapse dropdownborder" id="taycollapseExample8">
 
- <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
    <h1 style="margin-bottom: 10px;">Tay'Prono</h1>
         <input name="numcourse" type="hidden" th:value="${numcourse}"> 
@@ -2334,7 +2334,7 @@
 
 <div th:fragment="taypronos-dropdownsnine(racehorses, numcourse)" class="collapse dropdownborder" id="taycollapseExample9">
 
- <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
    <h1 style="margin-bottom: 10px;">Tay'Prono</h1>
         <input name="numcourse" type="hidden" th:value="${numcourse}"> 
@@ -2443,7 +2443,7 @@
 
 <div th:fragment="taypronos-dropdownsten(racehorses, numcourse)" class="collapse dropdownborder" id="taycollapseExample10">
 
- <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
    <h1 style="margin-bottom: 10px;">Tay'Prono</h1>
         <input name="numcourse" type="hidden" th:value="${numcourse}"> 
@@ -2552,7 +2552,7 @@
 
 <div th:fragment="taypronos-dropdownseleven(racehorses, numcourse)" class="collapse dropdownborder" id="taycollapseExample11">
 
- <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
    <h1 style="margin-bottom: 10px;">Tay'Prono</h1>
         <input name="numcourse" type="hidden" th:value="${numcourse}"> 
@@ -2661,7 +2661,7 @@
 
 <div th:fragment="taypronos-dropdownstwelve(racehorses, numcourse)" class="collapse dropdownborder" id="taycollapseExample12">
 
- <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunion})}" method="POST">
+ <form th:action="@{set-tay-pronos?jour={jour}&reunion={reunion}(jour=${jour}, reunion=${reunionstring})}" method="POST">
  
    <h1 style="margin-bottom: 10px;">Tay'Prono</h1>
         <input name="numcourse" type="hidden" th:value="${numcourse}"> 
