--- a/src/main/resources/templates/day-infos.html
+++ b/src/main/resources/templates/day-infos.html
@@ -36,9 +36,9 @@
   </div>
   
   
-<!--   <div class="btn-group mr-2" role="group" aria-label="Second group"> -->
-<!--     <a th:href="@{/reunion-infos?reunion=2}" type="button" class="btn btn-secondary">2</a> -->
-<!--   </div> -->
+  <div class="" style="margin-top: 180px;">
+    <a th:href="@{/delete-day?jour={jour}(jour=${jour})}" type="button" class="btn btn-secondary">Supprimer la journée</a>
+  </div>
 <!--   <div class="btn-group mr-2" role="group" aria-label="Third group"> -->
 <!--     <a th:href="@{/reunion-infos?reunion=3}" type="button" class="btn btn-secondary">3</a> -->
 <!--   </div> -->
