--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,7 +20,11 @@
 <div class="bg-text">
   <h1 style="font-style: oblique;">DjeTay'infos</h1>
   <h3>&Agrave; la recherche du spécialiste !</h3>
-</div>        		
+</div>        	
+
+<!--   <div class="" style="margin-top: 180px;"> -->
+<!--     <a th:href="@{/archives-places}" type="button" class="btn btn-secondary">Archives</a> -->
+<!--   </div>	 -->
 
 
 
