--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,9 +22,9 @@
   <h3>&Agrave; la recherche du spécialiste !</h3>
 </div>        	
 
-<!--   <div class="" style="margin-top: 180px;"> -->
-<!--     <a th:href="@{/archives-places}" type="button" class="btn btn-secondary">Archives</a> -->
-<!--   </div>	 -->
+  <div class="" style="margin-top: 180px;">
+    <a th:href="@{/archives-places}" type="button" class="btn btn-secondary">Archives</a>
+  </div>	
 
 
 
