--- a/src/main/resources/templates/place-table.html
+++ b/src/main/resources/templates/place-table.html
@@ -14,6 +14,11 @@
 </head>
 <body>
         		<div th:replace="_nav-components :: nav">...</div>
+        		
+      <div style="border: 1px solid black;" th:text="${'Joués: ' + numberofbets + '  -  Gains: ' + totalgains + '  -  Benef: ' + benef}">...</div>
+            <div style="border: 1px solid black;" th:text="${'Bankroll initiale: ' + initialBankrollAmount + '  -  Bankroll actuelle: ' + newBankrollAmount + '  -  Benef: ' + bankrollBenef + ' - Multiplication capital: X' + cotecapital + ' - Minimum: ' + minimumBankrollAmount}">...</div>
+      
+        		
 
 <table class="table">
   <thead>
@@ -27,14 +32,14 @@
   <tbody th:each="p: ${placelist}" >
     <tr th:if="${p.liveOddPlace gt 0}" style="background-color: green;" class="text-white">
       <th  th:text="${pStat.index + 1}" scope="row"></th>
-              <td th:text="${p.jour + ' - R' + p.R + ' C' + p.C + ' - ' + p.numero}"></td>
-             <td th:text="${p.liveOddPlace}"></td>
+              <td th:text="${p.jour + ' - R' + p.reunionstring + ' C' + p.C + ' - ' + p.numero + ' - ' + p.hour}"></td>
+             <td th:text="${p.liveOddPlace +' - G: ' + p.liveOdd + '/1'}"></td>
 
     </tr>
       <tr th:if="${p.liveOddPlace eq null or p.liveOddPlace == 0}" style="background-color: red;" class="text-white">
       <th  th:text="${pStat.index + 1}" scope="row"></th>
-              <td th:text="${p.jour + ' - R' + p.R + ' C' + p.C + ' - ' + p.numero}"></td>
-             <td th:text="${p.liveOddPlace}"></td>
+              <td th:text="${p.jour + ' - R' + p.reunionstring + ' C' + p.C + ' - ' + p.numero + ' - ' + p.hour}"></td>
+             <td th:text="${p.liveOddPlace +' - G: ' + p.liveOdd + '/1'}"></td>
 
     </tr>
   </tbody>
