--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -247,9 +247,11 @@ background-color: #90EE90;
 .chronoscolor{
     background-color: white;
 }
-/* .pronocolor{ */
-/* 	background-color: 	#FF69B4; */
-/* } */
+.vertfluo{
+	background-color: 	#83f52c;
+		color: white;
+	
+}
 
 
 
