--- a/src/main/resources/templates/_nav-components.html
+++ b/src/main/resources/templates/_nav-components.html
@@ -84,7 +84,7 @@
            <img style="width: 55px; height: 60px; box-shadow: 4px 4px 8px #000000; border-style: solid; border-radius: 50%; border-color: gold;" th:src="@{/img/horsefire.jpg}" alt="logo" /> 
 
 
-           Sam & Tay Infos 
+           Sam'Tay Infos 
 <!--            &Agrave; la recherche du spécialiste  -->
                
 		</a>		
