--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,7 +18,7 @@
 <div class="bg-image"></div>
 
 <div class="bg-text">
-  <h1 style="font-style: oblique;">DjeTay'infos</h1>
+  <h1 style="font-style: oblique;">Sam'Tay Infos</h1>
   <h3>&Agrave; la recherche du spécialiste !</h3>
 </div>        	
 
